--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <link href="img/favicon.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/main.css?v=74651" rel="stylesheet" type="text/css">
-    <script src="js/main.js?v=74651" type="text/javascript"></script>
+    <link href="css/main.css?v=35839" rel="stylesheet" type="text/css">
+    <script src="js/main.js?v=35839" type="text/javascript"></script>
     <!-- Meta tags facebook-->
     <meta property="og:title" content="#">
     <meta property="og:description" content="#">
@@ -104,33 +104,58 @@
               <p>Optimiza la gestión de inventarios y vende de forma ágil, proyectando tu stock a futuro con nuestro avanzado sistema de ventas. Toma el control total de todos tus canales de ventas, ya sea en tienda física o e-commerce.</p>
               <div class="section__buttons"><a href="#" class="btn">Cotizar</a><a href="#" class="btn btn--secondary">Planes y precios</a></div>
             </div>
-            <div class="section__features">
-              <div class="section__feature">
-                <div class="section__icon"><img src="img/icons/icon-feature-1.png"></div>
-                <h4 class="section__title">Ventas</h4>
+            <!--.section__features
+            .section__feature
+            	.section__icon
+            		img(src="img/icons/icon-feature-1.png")
+            	h4.section__title Ventas
+            .section__feature
+            	.section__icon
+            		img(src="img/icons/icon-feature-2.png")
+            	h4.section__title Inventario
+            .section__feature
+            	.section__icon
+            		img(src="img/icons/icon-feature-3.png")
+            	h4.section__title Administración
+            .section__feature
+            	.section__icon
+            		img(src="img/icons/icon-feature-4.png")
+            	h4.section__title Roles y permisos
+            .section__feature
+            	.section__icon
+            		img(src="img/icons/icon-feature-5.png")
+            	h4.section__title Emisión de documentos
+            .section__feature
+            	.section__icon
+            		img(src="img/icons/icon-feature-6.png")
+            	h4.section__title Integración al ERP defontana
+            
+            
+            -->
+            <div class="section__image"> <img src="img/uploads/image-mainhero.png"></div>
+          </div>
+        </div>
+      </section>
+      <section class="section--tabs"> 
+        <div class="section__wrap"> 
+          <div class="section__body"> 
+            <div class="section__items"> 
+              <div data-index="0" class="section__item current"> 
+                <p>Automatiza tus operaciones</p>
               </div>
-              <div class="section__feature">
-                <div class="section__icon"><img src="img/icons/icon-feature-2.png"></div>
-                <h4 class="section__title">Inventario</h4>
+              <div data-index="1" class="section__item"> 
+                <p>Software punto de venta online, con la seguridad que mereces</p>
               </div>
-              <div class="section__feature">
-                <div class="section__icon"><img src="img/icons/icon-feature-3.png"></div>
-                <h4 class="section__title">Administración</h4>
+              <div data-index="2" class="section__item"> 
+                <p>Úsalo donde lo necesites</p>
               </div>
-              <div class="section__feature">
-                <div class="section__icon"><img src="img/icons/icon-feature-4.png"></div>
-                <h4 class="section__title">Roles y permisos</h4>
-              </div>
-              <div class="section__feature">
-                <div class="section__icon"><img src="img/icons/icon-feature-5.png"></div>
-                <h4 class="section__title">Emisión de documentos</h4>
-              </div>
-              <div class="section__feature">
-                <div class="section__icon"><img src="img/icons/icon-feature-6.png"></div>
-                <h4 class="section__title">Integración al ERP defontana</h4>
+              <div data-index="3" class="section__item"> 
+                <p>Soporte garantizado</p>
               </div>
             </div>
-            <div class="section__image"> <img src="img/uploads/image-mainhero.png"></div>
+            <div class="section__carousel">
+              <div class="owl-carousel"><img src="img/uploads/image-carousel-1.svg"><img src="img/uploads/image-carousel-2.svg"><img src="img/uploads/image-carousel-3.svg"><img src="img/uploads/image-carousel-4.svg"></div>
+            </div>
           </div>
         </div>
       </section>
@@ -142,9 +167,9 @@
                 <div class="col-md-6">
                   <div class="section__content"> 
                     <h3 class="section__title">Automatiza tus operaciones</h3>
-                    <p>Sagittis sapien conubia justo justo potenti scelerisque condimentum scelerisque habitasse congue viverra posuere facilisis vivamus.
+                    <p>Porta vehicula accumsan platea diam scelerisque convallis maecenas arcu mattis ut eget luctus aptent cras.
                     </p>
-                    <p>Quisque fusce ut inceptos eros a aenean integer rutrum quis. Vehicula ut condimentum magna arcu quisque gravida blandit nostra at pretium venenatis curae iaculis ante.
+                    <p>Eu vulputate inceptos porttitor auctor aenean donec feugiat nisl ad. Per turpis a urna pellentesque donec ullamcorper malesuada odio integer iaculis tincidunt nunc congue ad.
                     </p>
                   </div>
                 </div>
@@ -165,9 +190,9 @@
                 <div class="col-md-6 col-md-push-6">
                   <div class="section__content"> 
                     <h3 class="section__title">Software punto de venta online, con la seguridad que mereces</h3>
-                    <p>Vestibulum donec consequat potenti rutrum libero lectus eget sodales urna volutpat conubia sem velit interdum.
+                    <p>Habitant nec mattis himenaeos curabitur venenatis libero sodales maecenas tortor elementum massa est sem proin.
                     </p>
-                    <p>Lectus taciti faucibus elementum condimentum aliquam purus dictum nulla tempor. Ligula pharetra tellus facilisis quisque blandit egestas lobortis ut habitasse tempor neque facilisis at ultrices.
+                    <p>Velit mattis ornare condimentum nostra primis at ante porta viverra. Himenaeos potenti nec feugiat ligula consequat sagittis posuere bibendum in aptent fermentum praesent elementum leo.
                     </p>
                   </div>
                 </div>
@@ -187,9 +212,9 @@
                 <div class="col-md-6">
                   <div class="section__content"> 
                     <h3 class="section__title">Úsalo donde lo necesites</h3>
-                    <p>Rutrum nunc ut maecenas senectus sapien id tincidunt praesent odio nisi hendrerit fermentum tellus ad.
+                    <p>Feugiat pretium vivamus integer mollis potenti cubilia elit tortor vitae metus volutpat nulla quis purus.
                     </p>
-                    <p>Nec cursus consectetur convallis accumsan class sagittis malesuada nostra integer. Molestie arcu sagittis tempus dictumst cras ornare aenean fusce vivamus sodales ultricies feugiat sed fames.
+                    <p>Condimentum sociosqu eleifend vehicula nibh elit in erat cubilia hendrerit. Suspendisse sodales gravida pretium per habitasse praesent arcu risus maecenas elit imperdiet blandit duis risus.
                     </p>
                   </div>
                 </div>
@@ -210,9 +235,9 @@
                 <div class="col-md-6 col-md-push-6">
                   <div class="section__content"> 
                     <h3 class="section__title">Soporte garantizado</h3>
-                    <p>Viverra fermentum scelerisque per vivamus malesuada molestie cubilia nec eget enim mauris sem felis volutpat.
+                    <p>Proin consequat sem colus egestas sem varius curae tempor egestas ultrices malesuada cubilia sollicitudin diam.
                     </p>
-                    <p>Ad conubia nec non convallis ut et tortor tellus aenean. Fusce justo laoreet condimentum fermentum conubia mi dictumst laoreet velit urna euismod taciti consectetur placerat.
+                    <p>Bibendum cursus gravida aliquam ut suspendisse nulla quisque sem porta. Massa fames ante rutrum curabitur aenean nullam phasellus nisi volutpat pretium nisi ultricies feugiat aptent.
                     </p>
                   </div>
                 </div>
@@ -237,7 +262,7 @@
                     <div class="article__icon"> <img src="img/icons/icon-feature-1.png"></div>
                     <div class="article__body"> 
                       <h4 class="article__title">Gestión de ventas</h4>
-                      <p class="article__description">Non convallis curabitur dictumst varius quisque ad lectus ullamcorper aptent laoreet ad urna colus nam.
+                      <p class="article__description">Felis quisque euismod velit vehicula dui varius integer lectus velit placerat phasellus accumsan fermentum sodales.
                       </p>
                     </div>
                   </article>
@@ -247,7 +272,7 @@
                     <div class="article__icon"> <img src="img/icons/icon-feature-1.png"></div>
                     <div class="article__body"> 
                       <h4 class="article__title">Inventario</h4>
-                      <p class="article__description">Ut habitant volutpat pharetra elementum posuere urna nibh pulvinar tristique tortor eu dui cursus eu.
+                      <p class="article__description">Magna facilisis porta dapibus donec sodales nisl porttitor dictumst habitant etiam vestibulum eget dictum himenaeos.
                       </p>
                     </div>
                   </article>
@@ -257,7 +282,7 @@
                     <div class="article__icon"> <img src="img/icons/icon-feature-1.png"></div>
                     <div class="article__body"> 
                       <h4 class="article__title">Múltiples locales</h4>
-                      <p class="article__description">Curabitur vehicula ullamcorper mattis aenean et tincidunt ultricies vestibulum eu cubilia nulla interdum cubilia magna.
+                      <p class="article__description">Sociosqu inceptos posuere nulla iaculis lobortis elit rhoncus mollis himenaeos placerat viverra lobortis consectetur sodales.
                       </p>
                     </div>
                   </article>
@@ -267,7 +292,7 @@
                     <div class="article__icon"> <img src="img/icons/icon-feature-1.png"></div>
                     <div class="article__body"> 
                       <h4 class="article__title">Venta por volumen</h4>
-                      <p class="article__description">Suscipit risus lectus porta egestas curabitur lacus auctor ut sociosqu ultrices fusce dictum viverra magna.
+                      <p class="article__description">Ultrices fringilla donec curabitur pellentesque habitant maecenas ornare dapibus enim himenaeos lacinia tellus ligula ligula.
                       </p>
                     </div>
                   </article>
@@ -277,7 +302,7 @@
                     <div class="article__icon"> <img src="img/icons/icon-feature-1.png"></div>
                     <div class="article__body"> 
                       <h4 class="article__title">Integración al ERP Defontana</h4>
-                      <p class="article__description">Litora suspendisse consequat in ut ultrices per egestas class viverra tristique id purus ultricies potenti.
+                      <p class="article__description">Ut aenean nostra bibendum cras netus aliquam metus suspendisse cursus feugiat pulvinar nibh in auctor.
                       </p>
                     </div>
                   </article>
@@ -287,7 +312,7 @@
                     <div class="article__icon"> <img src="img/icons/icon-feature-1.png"></div>
                     <div class="article__body"> 
                       <h4 class="article__title">Roles y permisos</h4>
-                      <p class="article__description">Elit torquent congue augue at curabitur vestibulum erat mattis suscipit etiam placerat aenean tellus elementum.
+                      <p class="article__description">Felis phasellus aliquam potenti hendrerit suscipit maecenas fusce etiam fames massa posuere primis aliquam eget.
                       </p>
                     </div>
                   </article>
@@ -297,7 +322,7 @@
                     <div class="article__icon"> <img src="img/icons/icon-feature-1.png"></div>
                     <div class="article__body"> 
                       <h4 class="article__title">E-Commerce</h4>
-                      <p class="article__description">Felis aenean commodo etiam mi curabitur donec lobortis molestie vulputate etiam fermentum rhoncus netus pulvinar.
+                      <p class="article__description">Nisi arcu lacus mauris metus etiam quisque a condimentum quis duis vestibulum donec vel fames.
                       </p>
                     </div>
                   </article>
@@ -307,7 +332,7 @@
                     <div class="article__icon"> <img src="img/icons/icon-feature-1.png"></div>
                     <div class="article__body"> 
                       <h4 class="article__title">Factoring</h4>
-                      <p class="article__description">Et interdum nulla suscipit himenaeos aliquet ultrices dictumst vestibulum elit blandit lectus feugiat ligula aptent.
+                      <p class="article__description">Elit malesuada ac hendrerit pellentesque odio volutpat mattis purus etiam conubia platea taciti quis dapibus.
                       </p>
                     </div>
                   </article>
@@ -327,7 +352,7 @@
               </div>
               <div class="section__banner__content">
                 <h3 class="section__title">El plan ideal para tu negocio lo encuentras aquí.</h3>
-                <p>Tempus maecenas dictum a tempor molestie habitasse massa vitae nibh justo metus nam ad nulla.
+                <p>Etiam augue sed est eget ut urna cras sapien augue nec non fusce congue euismod.
                 </p><a href="contact.html" class="btn btn--secondary">Ver planes y precio</a>
               </div>
             </div>
